clippy.log
[1m[92m    Checking[0m waecan-crypto v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-crypto)
[1m[92m    Checking[0m waecan-wallet v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-wallet)
[1m[92m    Checking[0m waecan-node v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-node)
[1m[92m    Checking[0m waecan-miner v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-miner)
[1m[92m    Checking[0m waecan-mempool v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-mempool)
[1m[92m    Checking[0m waecan-rpc v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-rpc)
[1m[92m    Checking[0m waecan-p2p v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-p2p)
[1m[92m    Checking[0m waecan-cli v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-cli)
[1m[92m    Checking[0m waecan-core v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-core)
[1m[92m    Checking[0m waecan-storage v0.1.0 (/home/runner/work/Waecan/Waecan/crates/waecan-storage)
[1m[91merror[E0433][0m[1m: failed to resolve: use of unresolved module or unlinked crate `curve25519_dalek`[0m
 [1m[94m--> [0mcrates/waecan-storage/src/db.rs:1:5
  [1m[94m|[0m
[1m[94m1[0m [1m[94m|[0m use curve25519_dalek::edwards::CompressedEdwardsY;
  [1m[94m|[0m     [1m[91m^^^^^^^^^^^^^^^^[0m [1m[91muse of unresolved module or unlinked crate `curve25519_dalek`[0m
  [1m[94m|[0m
  [1m[94m= [0m[1mhelp[0m: if you wanted to use a crate named `curve25519_dalek`, use `cargo add curve25519_dalek` to add it to your `Cargo.toml`

[1m[91merror[E0433][0m[1m: failed to resolve: use of unresolved module or unlinked crate `curve25519_dalek`[0m
 [1m[94m--> [0mcrates/waecan-storage/src/record.rs:2:5
  [1m[94m|[0m
[1m[94m2[0m [1m[94m|[0m use curve25519_dalek::edwards::CompressedEdwardsY;
  [1m[94m|[0m     [1m[91m^^^^^^^^^^^^^^^^[0m [1m[91muse of unresolved module or unlinked crate `curve25519_dalek`[0m
  [1m[94m|[0m
  [1m[94m= [0m[1mhelp[0m: if you wanted to use a crate named `curve25519_dalek`, use `cargo add curve25519_dalek` to add it to your `Cargo.toml`

[1m[91merror[E0425][0m[1m: cannot find function `serialize_header` in module `waecan_core::block`[0m
  [1m[94m--> [0mcrates/waecan-storage/src/db.rs:55:46
   [1m[94m|[0m
[1m[94m55[0m [1m[94m|[0m         let block_hash = waecan_core::block::serialize_header(&block.header);
   [1m[94m|[0m                                              [1m[91m^^^^^^^^^^^^^^^^[0m [1m[91mnot found in `waecan_core::block`[0m

[1m[91merror[E0282][0m[1m: type annotations needed[0m
  [1m[94m--> [0mcrates/waecan-storage/src/db.rs:69:39
   [1m[94m|[0m
[1m[94m69[0m [1m[94m|[0m             batch.delete_cf(&utxo_cf, key.as_bytes());
   [1m[94m|[0m                                       [1m[91m^^^[0m [1m[91mcannot infer type[0m

[1m[91merror[E0282][0m[1m: type annotations needed[0m
  [1m[94m--> [0mcrates/waecan-storage/src/db.rs:76:17
   [1m[94m|[0m
[1m[94m76[0m [1m[94m|[0m                 img.as_bytes(),
   [1m[94m|[0m                 [1m[91m^^^[0m [1m[91mcannot infer type[0m

[1m[91merror[E0282][0m[1m: type annotations needed[0m
   [1m[94m--> [0mcrates/waecan-storage/src/db.rs:108:39
    [1m[94m|[0m
[1m[94m108[0m [1m[94m|[0m             batch.delete_cf(&utxo_cf, key.as_bytes());
    [1m[94m|[0m                                       [1m[91m^^^[0m [1m[91mcannot infer type[0m

[1m[91merror[E0282][0m[1m: type annotations needed[0m
   [1m[94m--> [0mcrates/waecan-storage/src/db.rs:118:45
    [1m[94m|[0m
[1m[94m118[0m [1m[94m|[0m             batch.delete_cf(&key_images_cf, img.as_bytes());
    [1m[94m|[0m                                             [1m[91m^^^[0m [1m[91mcannot infer type[0m

[1m[91merror[E0308][0m[1m: mismatched types[0m
   [1m[94m--> [0mcrates/waecan-storage/src/db.rs:133:9
    [1m[94m|[0m
[1m[94m132[0m [1m[94m|[0m       ) -> Result<std::sync::Arc<rocksdb::BoundColumnFamily>, StorageError> {
    [1m[94m|[0m            [1m[94m----------------------------------------------------------------[0m [1m[94mexpected `std::result::Result<std::sync::Arc<rocksdb::BoundColumnFamily<'_>>, error::StorageError>` because of return type[0m
[1m[94m133[0m [1m[94m|[0m [1m[91m/[0m         self.db
[1m[94m134[0m [1m[94m|[0m [1m[91m|[0m             .cf_handle(name)
[1m[94m135[0m [1m[94m|[0m [1m[91m|[0m             .ok_or(StorageError::MissingColumnFamily(name))
    [1m[94m|[0m [1m[91m|___________________________________________________________^[0m [1m[91mexpected `Result<Arc<BoundColumnFamily<'_>>, ...>`, found `Result<&ColumnFamily, StorageError>`[0m
    [1m[94m|[0m
    [1m[94m= [0m[1mnote[0m: expected enum `std::result::Result<[1m[35mstd::sync::Arc<rocksdb::BoundColumnFamily<'_>>[0m, _>`
               found enum `std::result::Result<[1m[35m&[0m[1m[35mrocksdb::ColumnFamily[0m, _>`

[1mSome errors have detailed explanations: E0282, E0308, E0425, E0433.[0m
[1mFor more information about an error, try `rustc --explain E0282`.[0m
[1m[91merror[0m: could not compile `waecan-storage` (lib) due to 8 previous errors
